ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Schedule__c/CnP_PaaS__Invoice_Schedule__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Invoice Schedule</label>
    <nameField>
        <label>C&amp;P Invoice Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Invoice Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>