ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Schedule__c/fields/CnP_PaaS__Invoice__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;P Invoice</label>
    <referenceTo>CnP_PaaS__Invoice__c</referenceTo>
    <relationshipLabel>C&amp;P Invoice Schedule</relationshipLabel>
    <relationshipName>C_P_Invoice_Schedule_del</relationshipName>
    <type>Lookup</type>
</CustomField>