ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice_Schedule__c/fields/CnP_PaaS__Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Reminder_Date__c</fullName>
    <label>C&amp;P Reminder Date</label>
    <type>Date</type>
</CustomField>